# server

./: CMakeSettings.json
scripts/: client.sh  del.json  del.sh  empty_database.sql  end.json  end.sh  get.json  get.sh  inc.json  inc.sh  multiClient.sh  read.json  read.sh  sleep.json  sleep.sh  stat.json  stat.sh  write.json  write.sh
server/: CMakeLists.txt  clientService.cpp  clientService.hpp  server.cpp
